--- a/dashboard/src/pages/UserFiling/ClientSidebar.css
+++ b/dashboard/src/pages/UserFiling/ClientSidebar.css
@@ -20,9 +20,11 @@
 }
 
 .ClientSidebar {
-    height: 100vh;
-    width: 200px;
-    background-color:#3aa2b2;
+  position: sticky;
+  top: 0;
+  height: 100vh; 
+  width: 200px; 
+  background-color: #1C444D;
 }
 .SidebarNav {
     display: flex;
