--- a/dashboard/src/pages/UserFiling/UserDashboard.css
+++ b/dashboard/src/pages/UserFiling/UserDashboard.css
@@ -1,5 +1,36 @@
 .user-dashboard{
+   
     display: flex;
     flex-direction: row;
     align-items: flex-start;
 }
+
+.dashboard-content{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    height: 100%;
+}
+.dashboard-Funct{
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    justify-content: space-evenly       ;
+}
+
+.CalendarMain{
+    border: 2px solid #1C444D;
+    padding: 10px;
+}
+.calendar-wrapper {
+    border: 1px;
+    width: 500px;
+    height: 350px; 
+  }
+  .Img img {
+    width: 100%;
+    height: auto;
+    display: block; 
+    
+  }
