--- a/dashboard/src/pages/UserFiling/UserDashboard.css
+++ b/dashboard/src/pages/UserFiling/UserDashboard.css
@@ -1,27 +1,58 @@
 .user-dashboard{
-   
+  display: flex;
+  flex-direction: row;
+    width: 100%;
+    height: 100vh;
+    justify-content: space-between;
+  
+    overflow: hidden; 
+}
+.Text{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap: 10px;
+  justify-content: space-between;
+}
+.dashboard-content{
+  margin-top: 10px;
+
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-}
-
-.dashboard-content{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+    gap: 100px;
     width: 100%;
     height: 100%;
+    justify-content: space-between;
 }
 .dashboard-Funct{
-    display: flex;
-    flex-direction: row;
+    width: 110vh;
     padding: 20px;
-    justify-content: space-evenly       ;
+    top: 0;
+    overflow-y: auto;
 }
-
+.DetailsandEtc {
+  position: sticky;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 30px;
+  max-height: 100vh;
+  overflow: hidden;
+}
+.AppointmentSection{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+}
 .CalendarMain{
     border: 2px solid #1C444D;
     padding: 10px;
+}
+.BtnAppointment{
+  display: flex;
+  justify-content: flex-end;
 }
 .calendar-wrapper {
     border: 1px;
