Fixed User page, Profile for 3 schemas of users types and added appointment stage for the Patients ongoing fix on Admin pannel

--- a/dashboard/src/pages/UserFiling/UserDashboard.css
+++ b/dashboard/src/pages/UserFiling/UserDashboard.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
 }
 .dashboard-content{
-  margin-top: 10px;
+  margin-top: -30px;
 
     display: flex;
     flex-direction: row;
@@ -28,7 +28,6 @@
     width: 110vh;
     padding: 20px;
     top: 0;
-    overflow-y: auto;
 }
 .DetailsandEtc {
   position: sticky;
@@ -64,4 +63,7 @@
     height: auto;
     display: block; 
     
+  }
+  .table {
+   top: -50px;
   }
