Finish appointments, Records left to be finished

--- a/dashboard/src/pages/AdminPannel/ManageAppointment.css
+++ b/dashboard/src/pages/AdminPannel/ManageAppointment.css
@@ -1,12 +1,72 @@
 .ManageAppointment-dashboard{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
 }
 .ManageAppointment-content{
+    padding: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
+}
+.ManageAppointment-table {
+    position: relative;
+    max-height: 100%; 
+    width: 1500px;         
+    margin: auto;   
+    margin-top: -25px; 
+}
+.MuiTableContainer-root {
+    width: 100%; 
+    
+}
+
+/* Table Header */
+.ManageAppointment-table .MuiTableHead-root {
+    background-color: #000;  
+    
+}
+
+.ManageAppointment-table .MuiTableCell-head {
+    background-color: #000;
+    color: #fff;             
+    text-align: center;      
+    font-weight: bold;       
+}
+
+/* Table Cells */
+.ManageAppointment-table .MuiTableCell-body {
+    font-size: 14px;
+    padding: 12px 24px;      
+    text-align: center;
+}
+
+/* Table Rows */    
+.ManageAppointment-table .MuiTableRow-root {
+    height: 60px;           
+}
+
+.ManageAppointment-table .MuiTableRow-root:nth-child(odd) {
+    background-color: #f3f3f3; 
+}
+
+/* Modal Styling */
+.studentModal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: #fff;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+    padding: 24px;
+    border-radius: 8px;
+}
+
+.BTNADD {
+    margin-top: -50px;
+    display: flex;
+    justify-content: flex-end; 
+    margin-bottom: 16px;
+    left: 825px;
 }
