--- a/dashboard/src/pages/AdminPannel/ManageAppointment.css
+++ b/dashboard/src/pages/AdminPannel/ManageAppointment.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: left;
     justify-content: left;
+    gap: 20px;
 }
 .ManageAppointment-table {
     position: relative;
