--- a/dashboard/src/pages/AdminPannel/ManageDentist.css
+++ b/dashboard/src/pages/AdminPannel/ManageDentist.css
@@ -33,10 +33,10 @@
 }
 
 .ManageDentist-table .MuiTableCell-head {
-    background-color: #000;
-    color: #fff;             
-    text-align: center;      
-    font-weight: bold;       
+    background-color: #1c444d;
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
 }
 
 /* Table Cells */
